--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         </div>
         <div class="social">
             <div class="icon">
-                <a href="https://reddevill007.github.io/my-portfolio/"><i class="fas fa-globe-asia"></i></a>
+                <a href="https://reddevill007.github.io/my-portfolio/"><i class="fas fa-globe-asia" target = "_blank"></i></a>
             </div>
             <div class="icon">
-                <a href="https://www.instagram.com/red._.devill/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/red._.devill/"><i class="fab fa-instagram" target = "_blank"></i></a>
             </div>
             <div class="icon">
-                <a href="https://www.linkedin.com/in/saurabh-pandey-161348200/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/saurabh-pandey-161348200/" target = "_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="icon">
-                <a href="https://github.com/reddevill007"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/reddevill007" target = "_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </header>
